opam-version: "2.0"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/ocaml-subscriptions-transport-ws"
dev-repo: "git+https://github.com/anmonteiro/ocaml-subscriptions-transport-ws.git"
bug-reports: "https://github.com/anmonteiro/ocaml-subscriptions-transport-ws/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "1.0"}
  "graphql"
  "graphql_parser"
  "websocketaf"
]
